Project1VS/force-app/main/default/objects/DnDCampaign__c/DnDCampaign__c.object-meta.xml
<CustomObject>
    <label>DnDCampaign</label>
    <nameField>
        <displayFormat>dndcampaign-{0000}</displayFormat>
        <label>DnDCampaign Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DnDCampaigns</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>