Project1VS/force-app/main/default/objects/DnDCampaign__c/fields/Campaign_Name__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Name__c</fullName>
    <label>Campaign Name</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>