Project1VS/force-app/main/default/objects/DnDCampaign__c/fields/Dungeon_Master__c.field-meta.xml
<CustomField>
    <fullName>Dungeon_Master__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Dungeon Master</label>
    <referenceTo>User</referenceTo>
    <relationshipName>DnDCampaigns</relationshipName>
    <type>Lookup</type>
</CustomField>