Project1VS/force-app/main/default/objects/DnDCampaign__c/fields/Realm__c.field-meta.xml
<CustomField>
    <fullName>Realm__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Realm</label>
    <referenceTo>Realm__c</referenceTo>
    <relationshipLabel>DnDCampaigns</relationshipLabel>
    <relationshipName>DnDCampaigns</relationshipName>
    <type>Lookup</type>
</CustomField>