Project1VS/force-app/main/default/objects/DnDCampaign__c/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Region</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Region__c.In_Realm__c</field>
            <operation>equals</operation>
            <valueField>$Source.Realm__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Region__c</referenceTo>
    <relationshipLabel>DnDCampaigns</relationshipLabel>
    <relationshipName>DnDCampaigns</relationshipName>
    <type>Lookup</type>
</CustomField>